deploy: 1c7bcb5892a369a74d08df7cf166c60dce44044f

--- a/index.html
+++ b/index.html
@@ -993,9 +993,9 @@
       <img class="thumb" src="games/CS Go Clicker/thumbnail.png" alt="CS Go Clicker">
     </div>
     <div class="card-title">CS Go Clicker</div>
-  </div><div class="card game-card" data-index="22" data-folder="CirclO 2" data-name="circlo 2" onclick="prepareGame('CirclO%202','CirclO%202','games/CirclO 2/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/CirclO 2/thumbnail.jpg')">
-      <img class="thumb" src="games/CirclO 2/thumbnail.jpg" alt="CirclO 2">
+  </div><div class="card game-card" data-index="22" data-folder="CirclO 2" data-name="circlo 2" onclick="prepareGame('CirclO%202','CirclO%202','games/CirclO 2/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/CirclO 2/thumbnail.png')">
+      <img class="thumb" src="games/CirclO 2/thumbnail.png" alt="CirclO 2">
     </div>
     <div class="card-title">CirclO 2</div>
   </div><div class="card game-card" data-index="23" data-folder="Cluster Rush" data-name="cluster rush" onclick="prepareGame('Cluster%20Rush','Cluster%20Rush','games/Cluster Rush/thumbnail.png')">
@@ -1178,82 +1178,77 @@
       <img class="thumb" src="games/Grindcraft/thumbnail.jpg" alt="Grindcraft">
     </div>
     <div class="card-title">Grindcraft</div>
-  </div><div class="card game-card" data-index="59" data-folder="Gun Knight" data-name="gun knight" onclick="prepareGame('Gun%20Knight','Gun%20Knight','games/Gun Knight/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Gun Knight/thumbnail.png')">
-      <img class="thumb" src="games/Gun Knight/thumbnail.png" alt="Gun Knight">
-    </div>
-    <div class="card-title">Gun Knight</div>
-  </div><div class="card game-card" data-index="60" data-folder="Gun Spin" data-name="gun spin" onclick="prepareGame('Gun%20Spin','Gun%20Spin','games/Gun Spin/thumbnail.png')">
+  </div><div class="card game-card" data-index="59" data-folder="Gun Spin" data-name="gun spin" onclick="prepareGame('Gun%20Spin','Gun%20Spin','games/Gun Spin/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
       <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin">
     </div>
     <div class="card-title">Gun Spin</div>
-  </div><div class="card game-card" data-index="61" data-folder="Hanger 2" data-name="hanger 2" onclick="prepareGame('Hanger%202','Hanger%202','games/Hanger 2/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="60" data-folder="Hanger 2" data-name="hanger 2" onclick="prepareGame('Hanger%202','Hanger%202','games/Hanger 2/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Hanger 2/thumbnail.jpg')">
       <img class="thumb" src="games/Hanger 2/thumbnail.jpg" alt="Hanger 2">
     </div>
     <div class="card-title">Hanger 2</div>
-  </div><div class="card game-card" data-index="62" data-folder="Happy Room" data-name="happy room" onclick="prepareGame('Happy%20Room','Happy%20Room','games/Happy Room/thumbnail.png')">
+  </div><div class="card game-card" data-index="61" data-folder="Happy Room" data-name="happy room" onclick="prepareGame('Happy%20Room','Happy%20Room','games/Happy Room/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Room/thumbnail.png')">
       <img class="thumb" src="games/Happy Room/thumbnail.png" alt="Happy Room">
     </div>
     <div class="card-title">Happy Room</div>
-  </div><div class="card game-card" data-index="63" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="62" data-folder="Happy Wheels" data-name="happy wheels" onclick="prepareGame('Happy%20Wheels','Happy%20Wheels','games/Happy Wheels/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="64" data-folder="Helix Jump" data-name="helix jump" onclick="prepareGame('Helix%20Jump','Helix%20Jump','games/Helix Jump/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="63" data-folder="Helix Jump" data-name="helix jump" onclick="prepareGame('Helix%20Jump','Helix%20Jump','games/Helix Jump/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
       <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump">
     </div>
     <div class="card-title">Helix Jump</div>
-  </div><div class="card game-card" data-index="65" data-folder="Henry Stickmin Breaking The Bank" data-name="henry stickmin breaking the bank" onclick="prepareGame('Henry%20Stickmin%20Breaking%20The%20Bank','Henry%20Stickmin%20Breaking%20The%20Bank','games/Henry Stickmin Breaking The Bank/thumbnail.png')">
+  </div><div class="card game-card" data-index="64" data-folder="Henry Stickmin Breaking The Bank" data-name="henry stickmin breaking the bank" onclick="prepareGame('Henry%20Stickmin%20Breaking%20The%20Bank','Henry%20Stickmin%20Breaking%20The%20Bank','games/Henry Stickmin Breaking The Bank/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Breaking The Bank/thumbnail.png')">
       <img class="thumb" src="games/Henry Stickmin Breaking The Bank/thumbnail.png" alt="Henry Stickmin Breaking The Bank">
     </div>
     <div class="card-title">Henry Stickmin Breaking The Bank</div>
-  </div><div class="card game-card" data-index="66" data-folder="Henry Stickmin Escaping The Prison" data-name="henry stickmin escaping the prison" onclick="prepareGame('Henry%20Stickmin%20Escaping%20The%20Prison','Henry%20Stickmin%20Escaping%20The%20Prison','games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="65" data-folder="Henry Stickmin Escaping The Prison" data-name="henry stickmin escaping the prison" onclick="prepareGame('Henry%20Stickmin%20Escaping%20The%20Prison','Henry%20Stickmin%20Escaping%20The%20Prison','games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
       <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison">
     </div>
     <div class="card-title">Henry Stickmin Escaping The Prison</div>
-  </div><div class="card game-card" data-index="67" data-folder="Henry Stickmin Fleeing The Complex" data-name="henry stickmin fleeing the complex" onclick="prepareGame('Henry%20Stickmin%20Fleeing%20The%20Complex','Henry%20Stickmin%20Fleeing%20The%20Complex','games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
+  </div><div class="card game-card" data-index="66" data-folder="Henry Stickmin Fleeing The Complex" data-name="henry stickmin fleeing the complex" onclick="prepareGame('Henry%20Stickmin%20Fleeing%20The%20Complex','Henry%20Stickmin%20Fleeing%20The%20Complex','games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
       <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex">
     </div>
     <div class="card-title">Henry Stickmin Fleeing The Complex</div>
-  </div><div class="card game-card" data-index="68" data-folder="Henry Stickmin Infiltrating The Airship" data-name="henry stickmin infiltrating the airship" onclick="prepareGame('Henry%20Stickmin%20Infiltrating%20The%20Airship','Henry%20Stickmin%20Infiltrating%20The%20Airship','games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="67" data-folder="Henry Stickmin Infiltrating The Airship" data-name="henry stickmin infiltrating the airship" onclick="prepareGame('Henry%20Stickmin%20Infiltrating%20The%20Airship','Henry%20Stickmin%20Infiltrating%20The%20Airship','games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
       <img class="thumb" src="games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg" alt="Henry Stickmin Infiltrating The Airship">
     </div>
     <div class="card-title">Henry Stickmin Infiltrating The Airship</div>
-  </div><div class="card game-card" data-index="69" data-folder="Henry Stickmin Stealing The Diamond" data-name="henry stickmin stealing the diamond" onclick="prepareGame('Henry%20Stickmin%20Stealing%20The%20Diamond','Henry%20Stickmin%20Stealing%20The%20Diamond','games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="68" data-folder="Henry Stickmin Stealing The Diamond" data-name="henry stickmin stealing the diamond" onclick="prepareGame('Henry%20Stickmin%20Stealing%20The%20Diamond','Henry%20Stickmin%20Stealing%20The%20Diamond','games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
       <img class="thumb" src="games/Henry Stickmin Stealing The Diamond/thumbnail.jpg" alt="Henry Stickmin Stealing The Diamond">
     </div>
     <div class="card-title">Henry Stickmin Stealing The Diamond</div>
-  </div><div class="card game-card" data-index="70" data-folder="Highway Racer" data-name="highway racer" onclick="prepareGame('Highway%20Racer','Highway%20Racer','games/Highway Racer/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="69" data-folder="Highway Racer" data-name="highway racer" onclick="prepareGame('Highway%20Racer','Highway%20Racer','games/Highway Racer/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Highway Racer/thumbnail.jpg')">
       <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer">
     </div>
     <div class="card-title">Highway Racer</div>
-  </div><div class="card game-card" data-index="71" data-folder="Hill Climb Racing Lite" data-name="hill climb racing lite" onclick="prepareGame('Hill%20Climb%20Racing%20Lite','Hill%20Climb%20Racing%20Lite','games/Hill Climb Racing Lite/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="70" data-folder="Hill Climb Racing Lite" data-name="hill climb racing lite" onclick="prepareGame('Hill%20Climb%20Racing%20Lite','Hill%20Climb%20Racing%20Lite','games/Hill Climb Racing Lite/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Hill Climb Racing Lite/thumbnail.jpg')">
       <img class="thumb" src="games/Hill Climb Racing Lite/thumbnail.jpg" alt="Hill Climb Racing Lite">
     </div>
     <div class="card-title">Hill Climb Racing Lite</div>
-  </div><div class="card game-card" data-index="72" data-folder="Infinite Craft" data-name="infinite craft" onclick="prepareGame('Infinite%20Craft','Infinite%20Craft','games/Infinite Craft/thumbnail.png')">
+  </div><div class="card game-card" data-index="71" data-folder="Infinite Craft" data-name="infinite craft" onclick="prepareGame('Infinite%20Craft','Infinite%20Craft','games/Infinite Craft/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
       <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft">
     </div>
     <div class="card-title">Infinite Craft</div>
-  </div><div class="card game-card" data-index="73" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="72" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="74" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="73" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
