deploy: c63c28d4ac32510479102cbe38d1ddca84312114

--- a/index.html
+++ b/index.html
@@ -1178,52 +1178,57 @@
       <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels">
     </div>
     <div class="card-title">Happy Wheels</div>
-  </div><div class="card game-card" data-index="59" data-folder="Helix Jump" data-name="helix jump" onclick="prepareGame('Helix%20Jump','Helix%20Jump','games/Helix Jump/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="59" data-folder="Harvest.io" data-name="harvest.io" onclick="prepareGame('Harvest.io','Harvest.io','games/Harvest.io/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Harvest.io/thumbnail.png')">
+      <img class="thumb" src="games/Harvest.io/thumbnail.png" alt="Harvest.io">
+    </div>
+    <div class="card-title">Harvest.io</div>
+  </div><div class="card game-card" data-index="60" data-folder="Helix Jump" data-name="helix jump" onclick="prepareGame('Helix%20Jump','Helix%20Jump','games/Helix Jump/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
       <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump">
     </div>
     <div class="card-title">Helix Jump</div>
-  </div><div class="card game-card" data-index="60" data-folder="Henry Stickmin Escaping The Prison" data-name="henry stickmin escaping the prison" onclick="prepareGame('Henry%20Stickmin%20Escaping%20The%20Prison','Henry%20Stickmin%20Escaping%20The%20Prison','games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="61" data-folder="Henry Stickmin Escaping The Prison" data-name="henry stickmin escaping the prison" onclick="prepareGame('Henry%20Stickmin%20Escaping%20The%20Prison','Henry%20Stickmin%20Escaping%20The%20Prison','games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
       <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison">
     </div>
     <div class="card-title">Henry Stickmin Escaping The Prison</div>
-  </div><div class="card game-card" data-index="61" data-folder="Henry Stickmin Fleeing The Complex" data-name="henry stickmin fleeing the complex" onclick="prepareGame('Henry%20Stickmin%20Fleeing%20The%20Complex','Henry%20Stickmin%20Fleeing%20The%20Complex','games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
+  </div><div class="card game-card" data-index="62" data-folder="Henry Stickmin Fleeing The Complex" data-name="henry stickmin fleeing the complex" onclick="prepareGame('Henry%20Stickmin%20Fleeing%20The%20Complex','Henry%20Stickmin%20Fleeing%20The%20Complex','games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
       <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex">
     </div>
     <div class="card-title">Henry Stickmin Fleeing The Complex</div>
-  </div><div class="card game-card" data-index="62" data-folder="Henry Stickmin Infiltrating The Airship" data-name="henry stickmin infiltrating the airship" onclick="prepareGame('Henry%20Stickmin%20Infiltrating%20The%20Airship','Henry%20Stickmin%20Infiltrating%20The%20Airship','games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="63" data-folder="Henry Stickmin Infiltrating The Airship" data-name="henry stickmin infiltrating the airship" onclick="prepareGame('Henry%20Stickmin%20Infiltrating%20The%20Airship','Henry%20Stickmin%20Infiltrating%20The%20Airship','games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg')">
       <img class="thumb" src="games/Henry Stickmin Infiltrating The Airship/thumbnail.jpg" alt="Henry Stickmin Infiltrating The Airship">
     </div>
     <div class="card-title">Henry Stickmin Infiltrating The Airship</div>
-  </div><div class="card game-card" data-index="63" data-folder="Henry Stickmin Stealing The Diamond" data-name="henry stickmin stealing the diamond" onclick="prepareGame('Henry%20Stickmin%20Stealing%20The%20Diamond','Henry%20Stickmin%20Stealing%20The%20Diamond','games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="64" data-folder="Henry Stickmin Stealing The Diamond" data-name="henry stickmin stealing the diamond" onclick="prepareGame('Henry%20Stickmin%20Stealing%20The%20Diamond','Henry%20Stickmin%20Stealing%20The%20Diamond','games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Stealing The Diamond/thumbnail.jpg')">
       <img class="thumb" src="games/Henry Stickmin Stealing The Diamond/thumbnail.jpg" alt="Henry Stickmin Stealing The Diamond">
     </div>
     <div class="card-title">Henry Stickmin Stealing The Diamond</div>
-  </div><div class="card game-card" data-index="64" data-folder="Highway Racer" data-name="highway racer" onclick="prepareGame('Highway%20Racer','Highway%20Racer','games/Highway Racer/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="65" data-folder="Highway Racer" data-name="highway racer" onclick="prepareGame('Highway%20Racer','Highway%20Racer','games/Highway Racer/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Highway Racer/thumbnail.jpg')">
       <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer">
     </div>
     <div class="card-title">Highway Racer</div>
-  </div><div class="card game-card" data-index="65" data-folder="Hill Climb Racing Lite" data-name="hill climb racing lite" onclick="prepareGame('Hill%20Climb%20Racing%20Lite','Hill%20Climb%20Racing%20Lite','games/Hill Climb Racing Lite/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Hill Climb Racing Lite/thumbnail.jpg')">
-      <img class="thumb" src="games/Hill Climb Racing Lite/thumbnail.jpg" alt="Hill Climb Racing Lite">
+  </div><div class="card game-card" data-index="66" data-folder="Hill Climb Racing Lite" data-name="hill climb racing lite" onclick="prepareGame('Hill%20Climb%20Racing%20Lite','Hill%20Climb%20Racing%20Lite','games/Hill Climb Racing Lite/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Hill Climb Racing Lite/thumbnail.png')">
+      <img class="thumb" src="games/Hill Climb Racing Lite/thumbnail.png" alt="Hill Climb Racing Lite">
     </div>
     <div class="card-title">Hill Climb Racing Lite</div>
-  </div><div class="card game-card" data-index="66" data-folder="Infinite Craft" data-name="infinite craft" onclick="prepareGame('Infinite%20Craft','Infinite%20Craft','games/Infinite Craft/thumbnail.png')">
+  </div><div class="card game-card" data-index="67" data-folder="Infinite Craft" data-name="infinite craft" onclick="prepareGame('Infinite%20Craft','Infinite%20Craft','games/Infinite Craft/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
       <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft">
     </div>
     <div class="card-title">Infinite Craft</div>
-  </div><div class="card game-card" data-index="67" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="68" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="68" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="69" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
