--- a/index.html
+++ b/index.html
@@ -1213,17 +1213,22 @@
       <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer">
     </div>
     <div class="card-title">Highway Racer</div>
-  </div><div class="card game-card" data-index="66" data-folder="Infinite Craft" data-name="infinite craft" onclick="prepareGame('Infinite%20Craft','Infinite%20Craft','games/Infinite Craft/thumbnail.png')">
+  </div><div class="card game-card" data-index="66" data-folder="Hover Race Drive" data-name="hover race drive" onclick="prepareGame('Hover%20Race%20Drive','Hover%20Race%20Drive','games/Hover Race Drive/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.png')">
+      <img class="thumb" src="games/Hover Race Drive/thumbnail.png" alt="Hover Race Drive">
+    </div>
+    <div class="card-title">Hover Race Drive</div>
+  </div><div class="card game-card" data-index="67" data-folder="Infinite Craft" data-name="infinite craft" onclick="prepareGame('Infinite%20Craft','Infinite%20Craft','games/Infinite Craft/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
       <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft">
     </div>
     <div class="card-title">Infinite Craft</div>
-  </div><div class="card game-card" data-index="67" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="68" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="68" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="69" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
