deploy: 6ece014706f49345e773add00bd1a37a3cc302f7

--- a/index.html
+++ b/index.html
@@ -1233,17 +1233,22 @@
       <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu">
     </div>
     <div class="card-title">Hungry Lamu</div>
-  </div><div class="card game-card" data-index="70" data-folder="Infinite Craft" data-name="infinite craft" onclick="prepareGame('Infinite%20Craft','Infinite%20Craft','games/Infinite Craft/thumbnail.png')">
+  </div><div class="card game-card" data-index="70" data-folder="Idle Breakout" data-name="idle breakout" onclick="prepareGame('Idle%20Breakout','Idle%20Breakout','games/Idle Breakout/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Idle Breakout/thumbnail.png')">
+      <img class="thumb" src="games/Idle Breakout/thumbnail.png" alt="Idle Breakout">
+    </div>
+    <div class="card-title">Idle Breakout</div>
+  </div><div class="card game-card" data-index="71" data-folder="Infinite Craft" data-name="infinite craft" onclick="prepareGame('Infinite%20Craft','Infinite%20Craft','games/Infinite Craft/thumbnail.png')">
     <div class="thumb-container" style="--thumb-url: url('games/Infinite Craft/thumbnail.png')">
       <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft">
     </div>
     <div class="card-title">Infinite Craft</div>
-  </div><div class="card game-card" data-index="71" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="72" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
       <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope">
     </div>
     <div class="card-title">Slope</div>
-  </div><div class="card game-card" data-index="72" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
+  </div><div class="card game-card" data-index="73" data-folder="The Binding of Isaac - Wrath of the Lamb" data-name="the binding of isaac - wrath of the lamb" onclick="prepareGame('The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','The%20Binding%20of%20Isaac%20-%20Wrath%20of%20the%20Lamb','games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
     <div class="thumb-container" style="--thumb-url: url('games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg')">
       <img class="thumb" src="games/The Binding of Isaac - Wrath of the Lamb/thumbnail.jpg" alt="The Binding of Isaac - Wrath of the Lamb">
     </div>
