--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       }
     }
     
- /* Top Header Bar */
+/* Top Header Bar */
 #topHeader {
   background: linear-gradient(135deg, #330066 0%, #1a0033 100%);
   padding: clamp(1rem, 2vw, 1.5rem) clamp(1rem, 3vw, 2rem);
@@ -265,20 +265,43 @@
   align-items: center;
   justify-content: space-between;
   gap: clamp(0.5rem, 1.5vw, 1rem);
-  flex-wrap: nowrap; /* keep items on one line */
+  flex-wrap: nowrap;
 }
 
-/* Group to keep bookmark and search aligned right */
+/* Title stays left */
+#topHeader h1 {
+  margin: 0;
+  font-size: clamp(1.1rem, 2.2vw, 2.2rem);
+  font-weight: 900;
+  background: linear-gradient(135deg, var(--accent), var(--accent-light));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  white-space: nowrap;
+  cursor: pointer;
+  transition: transform .3s ease;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  flex-shrink: 1;
+  min-width: 0;
+}
+
+#topHeader h1:hover {
+  transform: scale(1.05);
+}
+
+/* Right group: bookmark + search bar */
 #rightHeaderGroup {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  gap: 0.6rem;           /* small space between bookmark and search */
-  margin-left: auto;     /* pushes group to the far right */
+  gap: 0.5rem;          /* small space between bookmark and search bar */
+  margin-left: auto;    /* pushes group to right side */
 }
 
-/* Bookmark button styling (unchanged visually) */
+/* Bookmark button - stays left of search bar */
 #bookmarkBtn {
+  order: 1;
   padding: 0.6rem 1rem;
   background: linear-gradient(135deg, rgba(255, 102, 255, 0.2), rgba(204, 51, 255, 0.2));
   border: 1px solid rgba(255, 102, 255, 0.4);
@@ -306,59 +329,16 @@
   transform: scale(0.95);
 }
 
-#topHeader h1 {
-  margin: 0;
-  font-size: clamp(1.1rem, 2.2vw, 2.2rem);
-  font-weight: 900;
-  background: linear-gradient(135deg, var(--accent), var(--accent-light));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  white-space: nowrap;
-  cursor: pointer;
-  transition: transform .3s ease;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  flex-shrink: 1;
-  min-width: 0;
-}
-
-#topHeader h1:hover {
-  transform: scale(1.05);
-}
-
-@media (max-width: 768px) {
-  #topHeader {
-    flex-direction: column;
-    gap: 0.8rem;
-    padding: 0.8rem 1rem;
-  }
-  #topHeader h1 {
-    font-size: clamp(1rem, 4vw, 1.5rem);
-    width: 100%;
-    text-align: center;
-  }
-  #rightHeaderGroup {
-    width: 100%;
-    justify-content: center;
-  }
-}
-
-/* Search bar container (kept same style) */
+/* Search container - stays at far right */
 #searchContainer {
+  order: 2;
   flex: 0 1 350px;
   max-width: 500px;
   min-width: 200px;
   position: relative;
 }
 
-@media (max-width: 768px) {
-  #searchContainer {
-    max-width: 100%;
-    width: 100%;
-  }
-}
-
+/* Search icon & bar styles (unchanged) */
 #searchIcon {
   position: absolute;
   left: 1rem;
@@ -392,84 +372,27 @@
   background: rgba(0, 0, 0, 0.6);
 }
 
-/* Search Results Dropdown (unchanged) */
-#searchDropdown {
-  position: absolute;
-  top: calc(100% + 0.5rem);
-  left: 0;
-  right: 0;
-  background: rgba(26, 0, 51, 0.98);
-  backdrop-filter: blur(20px);
-  border: 2px solid rgba(255, 102, 255, 0.4);
-  border-radius: 15px;
-  max-height: 400px;
-  overflow-y: auto;
-  display: none;
-  z-index: 1000;
-  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.7), 0 0 30px rgba(255, 102, 255, 0.3);
-}
-
-#searchDropdown.show {
-  display: block;
-  animation: slideDown 0.3s ease;
-}
-
-@keyframes slideDown {
-  from {
-    opacity: 0;
-    transform: translateY(-10px);
+/* Responsive layout */
+@media (max-width: 768px) {
+  #topHeader {
+    flex-direction: column;
+    gap: 0.8rem;
+    padding: 0.8rem 1rem;
   }
-  to {
-    opacity: 1;
-    transform: translateY(0);
+  #topHeader h1 {
+    font-size: clamp(1rem, 4vw, 1.5rem);
+    width: 100%;
+    text-align: center;
+  }
+  #rightHeaderGroup {
+    width: 100%;
+    justify-content: center;
+  }
+  #searchContainer {
+    flex: 1;
+    max-width: 100%;
   }
 }
-
-.search-result-item {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  padding: 0.8rem 1rem;
-  cursor: pointer;
-  transition: all .2s ease;
-  border-bottom: 1px solid rgba(255, 102, 255, 0.1);
-}
-
-.search-result-item:last-child {
-  border-bottom: none;
-}
-
-.search-result-item:hover {
-  background: rgba(102, 0, 153, 0.5);
-  padding-left: 1.5rem;
-}
-
-.search-result-thumb {
-  width: 50px;
-  height: 50px;
-  border-radius: 8px;
-  object-fit: cover;
-  border: 2px solid rgba(255, 102, 255, 0.3);
-}
-
-.search-result-name {
-  font-family: var(--font-main);
-  font-weight: 600;
-  color: #fff;
-  font-size: 0.95rem;
-}
-
-.search-no-results {
-  padding: 1.5rem;
-  text-align: center;
-  color: rgba(255, 255, 255, 0.6);
-  font-family: var(--font-main);
-}
-
-.content-wrapper {
-  padding: 1.5rem;
-}
-
 
     /* Controls (buttons) */
     #controls {
