deploy: 0b31d0c551c344d04f417ba339af98ee7498704e

--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
   color: var(--accent-light);
   transition: all .3s ease;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: right;
+  justify-content: right;
   min-width: 40px;
   height: 40px;
   flex-shrink: 0;
