deploy: d4a662391c3992d2049a0dd08f9ebf42fc4924b3

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  gap: 0.5rem;          /* small space between bookmark and search bar */
+  gap: 0.1rem;          /* small space between bookmark and search bar */
   margin-left: auto;    /* pushes group to right side */
 }
 
@@ -311,8 +311,8 @@
   color: var(--accent-light);
   transition: all .3s ease;
   display: flex;
-  align-items: right;
-  justify-content: right;
+  align-items: center;
+  justify-content: center;
   min-width: 40px;
   height: 40px;
   flex-shrink: 0;
