deploy: 965dc3808308782b241c8e718cceccce737211f6

--- a/index.html
+++ b/index.html
@@ -1089,9 +1089,9 @@
       <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader">
     </div>
     <div class="card-title">Dreader</div>
-  </div><div class="card game-card" data-index="48" data-folder="Dreadhead Parkour" data-name="dreadhead parkour" onclick="prepareGame('Dreadhead%20Parkour','Dreadhead%20Parkour','games/Dreadhead Parkour/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Dreadhead Parkour/thumbnail.jpg')">
-      <img class="thumb" src="games/Dreadhead Parkour/thumbnail.jpg" alt="Dreadhead Parkour">
+  </div><div class="card game-card" data-index="48" data-folder="Dreadhead Parkour" data-name="dreadhead parkour" onclick="prepareGame('Dreadhead%20Parkour','Dreadhead%20Parkour','games/Dreadhead Parkour/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Dreadhead Parkour/thumbnail.png')">
+      <img class="thumb" src="games/Dreadhead Parkour/thumbnail.png" alt="Dreadhead Parkour">
     </div>
     <div class="card-title">Dreadhead Parkour</div>
   </div><div class="card game-card" data-index="49" data-folder="Drift Boss" data-name="drift boss" onclick="prepareGame('Drift%20Boss','Drift%20Boss','games/Drift Boss/thumbnail.png')">
@@ -1512,9 +1512,9 @@
       <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader">
     </div>
     <div class="card-title">Dreader</div>
-  </div><div class="card game-card" data-index="36" data-folder="Dreadhead Parkour" data-name="dreadhead parkour" onclick="prepareGame('Dreadhead%20Parkour','Dreadhead%20Parkour','games/Dreadhead Parkour/thumbnail.jpg')">
-    <div class="thumb-container" style="--thumb-url: url('games/Dreadhead Parkour/thumbnail.jpg')">
-      <img class="thumb" src="games/Dreadhead Parkour/thumbnail.jpg" alt="Dreadhead Parkour">
+  </div><div class="card game-card" data-index="36" data-folder="Dreadhead Parkour" data-name="dreadhead parkour" onclick="prepareGame('Dreadhead%20Parkour','Dreadhead%20Parkour','games/Dreadhead Parkour/thumbnail.png')">
+    <div class="thumb-container" style="--thumb-url: url('games/Dreadhead Parkour/thumbnail.png')">
+      <img class="thumb" src="games/Dreadhead Parkour/thumbnail.png" alt="Dreadhead Parkour">
     </div>
     <div class="card-title">Dreadhead Parkour</div>
   </div><div class="card game-card" data-index="37" data-folder="Drift Boss" data-name="drift boss" onclick="prepareGame('Drift%20Boss','Drift%20Boss','games/Drift Boss/thumbnail.png')">
