deploy: 6d1bc26f16738c2896b5c04795f01c2c282fb37f

--- a/index.html
+++ b/index.html
@@ -1279,9 +1279,9 @@
       <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer">
     </div>
     <div class="card-title">Highway Racer</div>
-  </div><div class="card game-card" data-index="86" data-folder="Hover Race Drive" data-name="hover race drive" onclick="prepareGame('Hover%20Race%20Drive','Hover%20Race%20Drive','games/Hover Race Drive/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.png')">
-      <img class="thumb" src="games/Hover Race Drive/thumbnail.png" alt="Hover Race Drive">
+  </div><div class="card game-card" data-index="86" data-folder="Hover Race Drive" data-name="hover race drive" onclick="prepareGame('Hover%20Race%20Drive','Hover%20Race%20Drive','games/Hover Race Drive/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.jpg')">
+      <img class="thumb" src="games/Hover Race Drive/thumbnail.jpg" alt="Hover Race Drive">
     </div>
     <div class="card-title">Hover Race Drive</div>
   </div><div class="card game-card" data-index="87" data-folder="Hungry Knight" data-name="hungry knight" onclick="prepareGame('Hungry%20Knight','Hungry%20Knight','games/Hungry Knight/thumbnail.png')">
@@ -1657,9 +1657,9 @@
       <img class="thumb" src="games/Highway Racer/thumbnail.jpg" alt="Highway Racer">
     </div>
     <div class="card-title">Highway Racer</div>
-  </div><div class="card game-card" data-index="66" data-folder="Hover Race Drive" data-name="hover race drive" onclick="prepareGame('Hover%20Race%20Drive','Hover%20Race%20Drive','games/Hover Race Drive/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.png')">
-      <img class="thumb" src="games/Hover Race Drive/thumbnail.png" alt="Hover Race Drive">
+  </div><div class="card game-card" data-index="66" data-folder="Hover Race Drive" data-name="hover race drive" onclick="prepareGame('Hover%20Race%20Drive','Hover%20Race%20Drive','games/Hover Race Drive/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Hover Race Drive/thumbnail.jpg')">
+      <img class="thumb" src="games/Hover Race Drive/thumbnail.jpg" alt="Hover Race Drive">
     </div>
     <div class="card-title">Hover Race Drive</div>
   </div><div class="card game-card" data-index="67" data-folder="Hungry Knight" data-name="hungry knight" onclick="prepareGame('Hungry%20Knight','Hungry%20Knight','games/Hungry Knight/thumbnail.png')">
