deploy: 80e9e443cdc3c6ffe2c812abc9306b18ed13a4da

--- a/index.html
+++ b/index.html
@@ -1304,9 +1304,9 @@
       <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft">
     </div>
     <div class="card-title">Infinite Craft</div>
-  </div><div class="card game-card" data-index="91" data-folder="Ink Game" data-name="ink game" onclick="prepareGame('Ink%20Game','Ink%20Game','games/Ink Game/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.png')">
-      <img class="thumb" src="games/Ink Game/thumbnail.png" alt="Ink Game">
+  </div><div class="card game-card" data-index="91" data-folder="Ink Game" data-name="ink game" onclick="prepareGame('Ink%20Game','Ink%20Game','games/Ink Game/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.jpg')">
+      <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game">
     </div>
     <div class="card-title">Ink Game</div>
   </div><div class="card game-card" data-index="92" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
@@ -1682,9 +1682,9 @@
       <img class="thumb" src="games/Infinite Craft/thumbnail.png" alt="Infinite Craft">
     </div>
     <div class="card-title">Infinite Craft</div>
-  </div><div class="card game-card" data-index="71" data-folder="Ink Game" data-name="ink game" onclick="prepareGame('Ink%20Game','Ink%20Game','games/Ink Game/thumbnail.png')">
-    <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.png')">
-      <img class="thumb" src="games/Ink Game/thumbnail.png" alt="Ink Game">
+  </div><div class="card game-card" data-index="71" data-folder="Ink Game" data-name="ink game" onclick="prepareGame('Ink%20Game','Ink%20Game','games/Ink Game/thumbnail.jpg')">
+    <div class="thumb-container" style="--thumb-url: url('games/Ink Game/thumbnail.jpg')">
+      <img class="thumb" src="games/Ink Game/thumbnail.jpg" alt="Ink Game">
     </div>
     <div class="card-title">Ink Game</div>
   </div><div class="card game-card" data-index="72" data-folder="Slope" data-name="slope" onclick="prepareGame('Slope','Slope','games/Slope/thumbnail.jpg')">
